# postgres_homework

./: pyproject.toml
homework-1/: create_tables.sql  main.py
