[tool.poetry]
name = "postgres-homework"
version = "0.1.0"
description = ""
authors = ["RmanKartavcev <128297080+Ramzes8@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "postgres_homework"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

